team page improvement, mobile menu fix, footer adjustment on mobile, scroll top improvement

--- a/css/index.css
+++ b/css/index.css
@@ -284,10 +284,10 @@ h1 {
   margin-bottom: 2rem;
 }
 
-.hint {
+.subtitle {
   color: rgb(78, 78, 78);
   font-size: 14px;
-  margin: 0;
+  margin: 0 !important;
 }
 
 .mobile {
@@ -315,7 +315,7 @@ h1 {
     display: unset;
   }
 
-  .hint {
+  .subtitle {
     font-size: 12px;
   }
 
@@ -332,7 +332,8 @@ h1 {
 }
 
 .page-content > p {
-  max-width: 60rem;
+  max-width: 60em;
+  margin-bottom: 4em;
 }
 
 h1 {
@@ -369,7 +370,7 @@ h1 {
   opacity: 0.5;
   transition: opacity 0.2s ease;
   font-size: smaller;
-  margin: 2rem min(2rem, 2.5vw);
+  margin: 2rem min(2rem, 3.5vw);
 
   text-decoration: none;
   display: flex;
@@ -377,8 +378,15 @@ h1 {
   align-items: center;
 }
 
+@media (max-width: 720px) {
+  .footer-link {
+    font-size: 12px;
+  }
+}
+
 .footer-link:hover {
   opacity: 1;
+  background-color: #ffffff00;
 }
 
 .tiny-logo {
@@ -429,6 +437,7 @@ h1 {
 #team.page-content {
   margin-right: 0;
   margin-left: 0;
+  overflow: hidden;
 }
 
 #team-mobile-view {
@@ -441,7 +450,9 @@ h1 {
   flex-direction: row;
   position: relative;
   width: min(60vw, 1000px);
+  height: max(15vw, 22.5vh);
   margin-top: 30px;
+  margin-bottom: 200px;
 }
 
 @media (max-width: 1250px) {
@@ -542,20 +553,25 @@ h1 {
 /* } */
 
 .mini-waves {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: max(20vw, 30vh);
   max-height: unset;
-  transition: transform 1s cubic-bezier(0,.7,.6,1);
+  transition: transform 0.75s cubic-bezier(0,.7,.6,1);
 }
 
 .mini-waves.down {
   transform: translateY(100%);
-  transition: transform 1s cubic-bezier(.7,0,1,.6);
+  transition: transform 0.75s cubic-bezier(.7,0,1,.6);
 }
 
 .team-page-waves > use {
-  transition: x 1s;
+  transition: x 0.75s cubic-bezier(.7,0,1,.6), y 0.75s cubic-bezier(.7,0,1,.6);
+}
+
+.down > .team-page-waves > use {
+  /* transition: x 0.75s cubic-bezier(0,.7,.6,1), y 0.75s cubic-bezier(0,.7,.6,1); */
+  transition: x 0.75s linear, y 0.75s linear;
 }
 
 .down > .team-page-waves > use:nth-child(1) {
@@ -563,15 +579,18 @@ h1 {
 }
 
 .down > .team-page-waves > use:nth-child(2) {
-  x: 20px
+  x: 20px;
+  y: 12px;
 }
 
 .down > .team-page-waves > use:nth-child(3) {
   x: 10px;
+  y: 20px;
 }
 
 .down > .team-page-waves > use:nth-child(4) {
   x: -30px;
+  y: 28px;
 }
 
 /* End Team Styles */
